# pycon-2026-fastapi-celery-tutorial

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.cursor/rules/: 00-project-core.mdc  10-backend.mdc  20-frontend.mdc  30-verification.mdc  40-checkpoints.mdc
api/: Dockerfile  requirements.txt
api/app/: celery_client.py  config.py  main.py  routes.py
api/app/routes/: videos.py
app/: main.py  schemas.py  settings.py
docs/: checkpoint-acceptance.md  tutorial-spec.md  workshop-overview-ko.md
scripts/: dev.py  generate_sample.py
static/: index.html  style.css
web/: index.html  player.js
worker/: Dockerfile  celery_app.py  encoding.py  requirements.txt  tasks.py
worker/app/: celery_app.py  config.py  tasks.py
